logs/Slang/generated/keywords/5.6.2--keyword_until_with.sv.log
name: keyword_until_with
description: The 'until_with' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_until_with.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_until_with.sv:8:8: error: expected declarator
    bit until_with;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_until_with.sv:8:9: error: expected member
    bit until_with;
        ^~~~~~~~~~
